# Sub_Task_Sche

./: 1.c  README.md  comm.c  comm.h  config.c  config.h  main.c  makefile  sche.c  sche.h  type.h
cmake/: CMakeLists.txt
cmake/comm/: CMakeLists.txt
cmake/config/: CMakeLists.txt
cmake/sche/: CMakeLists.txt
code/: main.c
code/comm/include/: comm.h
code/comm/source/: comm.c
code/config/include/: config.h
code/config/source/: config.c
code/plat_header/: type.h
code/sche/include/: sche.h
code/sche/source/: sche.c
